# AgentHub

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  package-lock.json  package.json  render.yaml
backend/data/: agenthub-data.json
backend/src/: index.ts  types.ts
backend/src/db/: memory.ts  postgres.ts  selector.ts
backend/src/routes/: api.ts
backend/src/services/: priceService.ts  resolver.ts
contracts/agent_hub/: Cargo.toml
contracts/agent_hub/src/: contract.rs  lib.rs  service.rs  state.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
frontend/public/: coep-shim.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/cards/: AgentCard.tsx  SignalCard.tsx  StatCard.tsx
frontend/src/components/layout/: RootLayout.tsx
frontend/src/components/ui/: Loading.tsx  PriceDisplay.tsx
frontend/src/hooks/: useAgentHub.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/chain/: connection.ts  index.ts  init.ts  operations.ts  signer.ts  useChain.ts
frontend/src/lib/linera/: adapter.ts  index.ts  queries.ts  types.ts
frontend/src/pages/: AgentDetailPage.tsx  ExplorePage.tsx  LiveFeedPage.tsx  MyAgentsPage.tsx  RankingsPage.tsx
frontend/src/types/: linera-client.d.ts
scripts/: build-contract.sh  deploy-contract.sh  dev.sh
